# reinforcement-learning-sumo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  report.md  requirements.txt  run.out  setup.py  start_state.xml  start_state_39133.xml  start_state_42519.xml  start_state_49311.xml  start_state_54097.xml  start_state_60965.xml  train.py
example/: README.md  run.sh
example/setting-files/: ES_4_25.json  NO-RL_4_25 copy.yaml  NO-RL_4_25.json  NO-RL_4_25.yaml  Replay.yaml
example/sumo-xml/: net.net.xml  network-settings.json
helpers/: __init__.py  preprocessing.py  register_environment.py  utils.py
models/: base_model.py  pfrl_ppo.py
my_gym/: generic_runner.py  simple_controller.py
my_gym/core/: __init__.py  actor.py  kernel.py  observer.py  rewarder.py
my_gym/environment/: __init__.py  env.py
my_gym/helpers/: __init__.py  post_processing.py  preprocessing.py  register_environment.py  utils.py
my_gym/parameters/: __init__.py  params.py
my_gym/trainers/: training_functions.py
my_gym/visualize/: rllib.py
rl_sumo/core/: DualRingActor.py  MaxPressureObserver.py  __init__.py  actor.py  actor_old.py  kernel.py  observer.py  rewarder.py
scripts/: create_videos.sh  install.sh  run.sh
settings/: 4_16_2020.json  ES_4_21.json  ES_4_22.json  ES_4_22_1.json  ES_4_25_transfer.json  ES_4_26_transfer copy.json  ES_4_27.json  ES_4_27_FC.json  ES_4_45.json  No_RL.json  No_RL_4_25.json  No_RL_4_25_no_video.json  No_RL_4_27.json  PPO_4_23.json  PPO_4_24.json  PPO_4_29.json  no-rl_4_21_vscode.json
trainers/: __init__.py  training_functions.py
(+28 files in other folders)
